# hwloc

./: Makefile.am  NEWS
config/: hwloc.m4  hwloc_internal.m4
contrib/android/AndroidApp/lstopo/: build.gradle
contrib/ci.inria.fr/: job-3-sonarscanner.sh
contrib/liblstopo/example/: Makefile.am  example.c
contrib/windows/: lstopo-no-graphics.vcxproj  lstopo-no-graphics.vcxproj.filters  lstopo-win.vcxproj  lstopo-win.vcxproj.filters  lstopo.vcxproj  private_config.h
doc/: Makefile.am  hwloc.doxy
hwloc/: bitmap.c  misc.c  topology-aix.c  topology-darwin.c  topology-freebsd.c  topology-hpux.c  topology-levelzero.c  topology-linux.c  topology-noos.c  topology-solaris.c  topology-windows.c  topology-x86.c  topology-xml.c  topology.c
include/: hwloc.h
include/hwloc/: bitmap.h  distances.h  rename.h
include/private/: misc.h  private.h
tests/hwloc/: hwloc_bitmap.c  hwloc_topology_abi.c
tests/hwloc/linux/: 2i386-2t-hugepagesizecount.xml
tests/hwloc/ports/include/hpux/sys/: mpctl.h
tests/hwloc/ports/include/levelzero/level_zero/: ze_api.h  zes_api.h
tests/hwloc/ports/include/solaris/sys/: mman.h
tests/hwloc/ports/include/windows/: windows.h
utils/hwloc/: hwloc-gather-cpuid.c  hwloc-gather-topology.in  misc.h
utils/lstopo/: Makefile.am  lstopo-ascii.c  lstopo-cairo.c  lstopo-core.c  lstopo-draw.c  lstopo-fig.c  lstopo-windows.c  lstopo.c  lstopo.h
